attempt at fixing overflow

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ h4 {
     padding: 1.2rem 2.5rem; }
 
 .testimonials__swiper {
-  overflow: initial; }
+  padding-top: 4rem; }
 
 .testimonials__slide {
   text-align: center;
@@ -482,7 +482,7 @@ h4 {
       padding: 0 7% 15rem; } }
   .testimonials__heading {
     text-align: center;
-    margin-bottom: 10.5rem; }
+    margin-bottom: 6.5rem; }
   .testimonials__btn-wrapper {
     text-align: center;
     margin-top: 6.5rem; }
