--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,6 +1,6 @@
 .testimonials {
   &__swiper {
-    overflow: initial;
+    padding-top: 4rem
   }
 
   &__slide {
