--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -136,17 +136,6 @@
     font-family: "Be Vietnam", sans-serif;
   }
 
-  &__btn {
-    // &:hover {
-    //   background: linear-gradient(
-    //       to left,
-    //       rgba($color-primary-red, 0.9),
-    //       rgba($color-primary-red, 0.9)
-    //     ),
-    //     $color-white !important;
-    // }
-  }
-
   &__copyright {
     color: $color-grey-dark;
 
