--- a/sass/main.css
+++ b/sass/main.css
@@ -185,7 +185,7 @@ h4 {
 }
 
 .testimonials__swiper {
-  overflow: initial;
+  padding-top: 4rem;
 }
 
 .testimonials__slide {
@@ -852,7 +852,7 @@ h4 {
 
 .testimonials__heading {
   text-align: center;
-  margin-bottom: 10.5rem;
+  margin-bottom: 6.5rem;
 }
 
 .testimonials__btn-wrapper {
