--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -171,7 +171,7 @@
 
   &__heading {
     text-align: center;
-    margin-bottom: 10.5rem;
+    margin-bottom: 6.5rem;
   }
 
   &__btn-wrapper {
